# todos-playwright-taf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
pages/: base_page.py  todos_page.py
tests/: conftest.py  test_add_todo.py  test_complete_todo.py  test_delete_todo.py  test_filters.py
